syntax = "proto3";

package arcs.android.crdt;

option java_package = "arcs.android.crdt";
option java_multiple_files = true;

import "java/arcs/android/crdt/crdt_set.proto";
import "java/arcs/android/crdt/referencable.proto";
import "java/arcs/android/crdt/version_map.proto";

message CrdtSingletonProto {
  message Data {
    VersionMapProto version_map = 1;
    // Maps from actor to DataValue.
    map<string, CrdtSetProto.DataValue> values = 2;
  }

  message Operation {
    message Update {
      VersionMapProto version_map = 1;
      string actor = 2;
      ReferencableProto value = 3;
    }

    message Clear {
      VersionMapProto version_map = 1;
      string actor = 2;
    }

    oneof operation {
      Update update = 1;
      Clear clear = 2;
    }
  }
}
